--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-src/static/js linguist-vendored
-src/static/js9 linguist-vendored
+src/static/js linguist-vendored=false
+src/static/js9 linguist-vendored=false
