--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
-src/static/js linguist-vendored=false
-src/static/js9 linguist-vendored=false
+src/static/js linguist-vendored
+src/static/js9 linguist-vendored
 *.js linguist-vendored
+src/templates linguist-vendored
+*.html linguist-vendored
