--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,9 +12,10 @@ astropy==4.0
 boto3==1.9.11
 botocore==1.12.11
 colorlog==4.0.2
-fastavro==0.21.8
-kafka==1.3.5
-kafka-python==1.4.3
+fastavro==0.21.8             
+confluent-kafka==1.3.0              
+kafka==1.3.5              
+kafka-python==1.4.3 
 lcogt-logging==0.3.2
 lz4tools==1.3.1.2
 matplotlib==3.1.2
