--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
-src/static/js linguist-vendored
-src/static/js9 linguist-vendored
-*.js linguist-vendored
-src/templates linguist-vendored
-*.html linguist-vendored
+src/static/js/* linguist-vendored export-ignore
+src/static/js9/* linguist-vendored export-ignore
+src/templates/* linguist-vendored
