--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # -
 *.pyc
 __pycache__
+.pytest_cache
 
 # +
 # Packages
@@ -13,6 +14,10 @@ __pycache__
 *.tar
 *.tgz
 *.zip
+*.js
+*.json
+*.map
+*.obsolete
 
 # +
 # Logs
@@ -46,14 +51,10 @@ src/common.py
 # +
 # other repositories
 # -
-src/static/js9/
-src/static/js9.*
-src/static/js/
-src/static/js.*
 src/static/css/bootstrap*
+src/static/js9
 
 # +
 # miscellaneous
 # -
-*.20*
 00_TO_DO_00
