--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,8 @@ src/static/js9
 00_TO_DO_00
 src/static/img/ZTF2*.png
 src/static/img/ZTF2*.jpg
+img/airmass/img/*.png
+img/airmass/img/*.jpg
+img/finders/img/*.png
+img/finders/img/*.jpg
 src/static/img/sassy_cron_mollweide.png
